@@ -134,6 +134,11 @@ and displayed in the Manage Filters dialog.</td>
 <td>Controls in Edit are now disabled if entry is protected, even though the user could
 not have saved any changes.</td>
 </tr>
+<tr>
+<td align="center" width="100">n/a</td>
+<td>Compare databases now correctly compares the 'Protect' and password policy 'symbols'
+fields of entries.</td>
+</tr>
 </tbody>
 </table>
 <hr style="width: 100%; height: 2px;"><span style="text-decoration: underline;"><span style="font-weight: bold;"></span></span>
